<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayoutRecentOrders"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MyRecentOrders">

            <LinearLayout
                android:id="@+id/awaitingConfirmationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFB74D"
                    android:paddingBottom="7dp"
                    android:paddingStart="10dp"
                    android:paddingTop="7dp"
                    android:text="@string/my_recent_orders_awaiting_conf"
                    android:textColor="#fff"
                    android:textSize="17sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/awaitingConfirmationRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5F5F5"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFB74D"
                    android:paddingBottom="7dp"
                    android:paddingStart="10dp"
                    android:paddingTop="7dp"
                    android:text="@string/my_recent_orders_awaiting_payment"
                    android:textColor="#fff"
                    android:textSize="17sp" />

                <LinearLayout
                    android:id="@+id/payNowAwaitingPaymentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/home_featured_rupee_icon" />

                    <TextView
                        android:id="@+id/totalPriceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:text=""
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/makePaymentButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#29B6F6"
                        android:text="Pay Now"
                        android:textColor="#fff" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/awaitingPaymentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:background="#fff"
                android:layout_marginBottom="10dp">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/makePaymentRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:nestedScrollingEnabled="false" />

                </android.support.v4.widget.NestedScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/inReadyProcessLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFB74D"
                    android:paddingBottom="7dp"
                    android:paddingStart="10dp"
                    android:paddingTop="7dp"
                    android:text="@string/my_recent_orders_in_process"
                    android:textColor="#fff"
                    android:textSize="17sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/inReadyProcessRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5F5F5"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancelledOrdersLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFB74D"
                    android:paddingBottom="7dp"
                    android:paddingStart="10dp"
                    android:paddingTop="7dp"
                    android:text="@string/my_recent_orders_cancelled_orders"
                    android:textColor="#fff"
                    android:textSize="17sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/cancelledOrdersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5F5F5"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>